--- a/pinbox/e20235231703ncash/style.css
+++ b/pinbox/e20235231703ncash/style.css
@@ -48,7 +48,7 @@ body {
 	-webkit-border-radius: 5px;
 	-moz-border-radius: 5px;
 	border-radius: 5px;
-	background: #ffc61c;
+	background: #ff5550;
 	text-align: center;
 	font-size: 14px;
 	color: #ffffff;
